@@ -422,18 +422,18 @@ function read_scroll(object)
 		ident = TRUE
 	elseif object.sval == SV_SCROLL_ENCHANT_ARMOR then
 		ident = TRUE
-		if not enchant_spell(0, 0, 1) then used_up = FALSE end
+		if not enchant_spell(0, 0, 1, FALSE) then used_up = FALSE end
 	elseif object.sval == SV_SCROLL_ENCHANT_WEAPON_TO_HIT then
-		if not enchant_spell(1, 0, 0) then used_up = FALSE end
+		if not enchant_spell(1, 0, 0, FALSE) then used_up = FALSE end
 		ident = TRUE
 	elseif object.sval == SV_SCROLL_ENCHANT_WEAPON_TO_DAM then
-		if not enchant_spell(0, 1, 0) then used_up = FALSE end
+		if not enchant_spell(0, 1, 0, FALSE) then used_up = FALSE end
 		ident = TRUE
 	elseif object.sval == SV_SCROLL_STAR_ENCHANT_ARMOR then
-		if not enchant_spell(0, 0, randint(3) + 2) then used_up = FALSE end
+		if not enchant_spell(0, 0, randint(3) + 2, FALSE) then used_up = FALSE end
 		ident = TRUE
 	elseif object.sval == SV_SCROLL_STAR_ENCHANT_WEAPON then
-		if not enchant_spell(randint(3), randint(3), 0) then used_up = FALSE end
+		if not enchant_spell(randint(3), randint(3), 0, FALSE) then used_up = FALSE end
 		ident = TRUE
 	elseif object.sval == SV_SCROLL_RECHARGING then
 		if not recharge(60) then used_up = FALSE end
@@ -639,7 +639,7 @@ function aim_wand(object)
 	player.energy_use = 100
 
 	-- Get the object level
-	local lev = k_info[object.k_idx].level
+	local lev = k_info[object.k_idx + 1].level
 
 	-- Base chance of success
 	local chance = player.skill_dev
@@ -796,7 +796,7 @@ function zap_rod(object)
 	player.energy_use = 100
 
 	-- Get the object level
-	local lev = k_info[object.k_idx].level
+	local lev = k_info[object.k_idx + 1].level
 
 	-- Base chance of success
 	local chance = player.skill_dev
