@@ -3,6 +3,8 @@ Nangband ChangeLog - If it's not broken, let's fix it until it is.
 
 2002-05-12
 ----------
+- Fixed array indices into k_info in object.lua -- C's k_info[0] corresponds
+  to k_info[1] in Lua. (pelpel)
 - Big screen support for GCU. As nangband -? says, it can be activated
   by nangband -- -b. Curses implementations react differently to SIGWINCH
   and I have no idea how to implement portable resizing... (pelpel)
